@@ -7,7 +7,7 @@ final class SkippedThrowable extends Throwable {
     private static final long serialVersionUID = 1L;
 
     SkippedThrowable(NotificationLevel scenarioOrStep) {
-        super(String.format("This %s is skipped", scenarioOrStep.lowerCaseName()), null, false, false);
+        super("This %s is skipped".formatted(scenarioOrStep.lowerCaseName()), null, false, false);
     }
 
     enum NotificationLevel {
